[package]
name = "rust_settler"
version = "0.1.0"
authors = ["niels <highintothesky@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "*"
piston = "*"
piston_window = "*"
tiled = "*"

[[bin]]
name = "rust_settler"
path = "src/main.rs"
