[package]
name = "rust_settler"
version = "0.1.0"
authors = ["niels <highintothesky@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "^0.3.0"
piston = "^0.33.0"
piston_window = "^0.70.0"
tiled = "^0.7.2"

[[bin]]
name = "rust_settler"
path = "src/main.rs"
